fixed issue with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 
 body {
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 a {
